# play-llm

./: .env.example  .gitignore  Dockerfile.agent  README.md  README_AGENT_GIT.md  agent_git.py  docker-compose.yml  litellm_config.yaml  run_server.sh
devops-agent/: Dockerfile.api  README.md  README_ARCHITECTURE.md  docker-compose.yml
devops-agent/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
devops-agent/api/: main.py  requirements.txt
devops-agent/ui/: index.html  nginx.conf
k8s/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
tools/: LICENSE  Makefile  README.md  agent-git  agent_git.py  agent_git_legacy.py  pyproject.toml
tools/agents/: __init__.py  base_agent.py  branch_agent.py  cli.py  clone_agent.py  config.py  git_tools.py  health_check.py  llm_tools.py  pr_agent.py  quick_pr_agent.py  scm_client.py  server.py  update_image_agent.py
tools/mantools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
